kubernetes/apps/litellm/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm:v1.104.1@sha256:501909ec6f504551f263f82fe8c53cfa34679d5753de507a2df69680a6021ad8
          ports:
            - containerPort: 4000
            - containerPort: 4001
          args:
            - --config
            - /app/config.yaml
            - --prometheus_metrics_port
            - "4001"
          volumeMounts:
            - name: litellm-config-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: "2Gi"
              cpu: "2000m"
      volumes:
        - name: litellm-config-volume
          configMap:
            name: litellm-config
