kubernetes/apps/litellm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
spec:
  selector:
    app: litellm
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
    - name: metrics
      protocol: TCP
      port: 4001
      targetPort: 4001
